Fix footer hidden behind tags-toggle in mobile

--- a/theme/assets/custom/style/footer.css
+++ b/theme/assets/custom/style/footer.css
@@ -1,6 +1,6 @@
 .footer {
     font-size: 1em;
-    padding: 2em 0;
+    padding: 2em 0 4em;
     color: #555;
     text-align: center;
 }
